Packages_2024/leptonica_1.82.0/lept/allheaders.inc


function pixCleanBackgroundToWhite(pixs: PPIX; pixim: PPIX; pixg: PPIX; gamma: Tl_float32; blackval: Tl_int32;
  whiteval: Tl_int32): PPIX; cdecl; external libleptb;
function pixBackgroundNormSimple(pixs: PPIX; pixim: PPIX; pixg: PPIX): PPIX; cdecl; external libleptb;
function pixBackgroundNorm(pixs: PPIX; pixim: PPIX; pixg: PPIX; sx: Tl_int32; sy: Tl_int32;
  thresh: Tl_int32; mincount: Tl_int32; bgval: Tl_int32; smoothx: Tl_int32; smoothy: Tl_int32): PPIX; cdecl; external libleptb;
function pixBackgroundNormMorph(pixs: PPIX; pixim: PPIX; reduction: Tl_int32; size: Tl_int32; bgval: Tl_int32): PPIX; cdecl; external libleptb;
function pixBackgroundNormGrayArray(pixs: PPIX; pixim: PPIX; sx: Tl_int32; sy: Tl_int32; thresh: Tl_int32;
  mincount: Tl_int32; bgval: Tl_int32; smoothx: Tl_int32; smoothy: Tl_int32; ppixd: PPPIX): Tl_ok; cdecl; external libleptb;
function pixBackgroundNormRGBArrays(pixs: PPIX; pixim: PPIX; pixg: PPIX; sx: Tl_int32; sy: Tl_int32;
  thresh: Tl_int32; mincount: Tl_int32; bgval: Tl_int32; smoothx: Tl_int32; smoothy: Tl_int32;
  ppixr: PPPIX; ppixg: PPPIX; ppixb: PPPIX): Tl_ok; cdecl; external libleptb;
function pixBackgroundNormGrayArrayMorph(pixs: PPIX; pixim: PPIX; reduction: Tl_int32; size: Tl_int32; bgval: Tl_int32;
  ppixd: PPPIX): Tl_ok; cdecl; external libleptb;
function pixBackgroundNormRGBArraysMorph(pixs: PPIX; pixim: PPIX; reduction: Tl_int32; size: Tl_int32; bgval: Tl_int32;
  ppixr: PPPIX; ppixg: PPPIX; ppixb: PPPIX): Tl_ok; cdecl; external libleptb;
function pixGetBackgroundGrayMap(pixs: PPIX; pixim: PPIX; sx: Tl_int32; sy: Tl_int32; thresh: Tl_int32;
  mincount: Tl_int32; ppixd: PPPIX): Tl_ok; cdecl; external libleptb;
function pixGetBackgroundRGBMap(pixs: PPIX; pixim: PPIX; pixg: PPIX; sx: Tl_int32; sy: Tl_int32;
  thresh: Tl_int32; mincount: Tl_int32; ppixmr: PPPIX; ppixmg: PPPIX; ppixmb: PPPIX): Tl_ok; cdecl; external libleptb;
function pixGetBackgroundGrayMapMorph(pixs: PPIX; pixim: PPIX; reduction: Tl_int32; size: Tl_int32; ppixm: PPPIX): Tl_ok; cdecl; external libleptb;
function pixGetBackgroundRGBMapMorph(pixs: PPIX; pixim: PPIX; reduction: Tl_int32; size: Tl_int32; ppixmr: PPPIX;
  ppixmg: PPPIX; ppixmb: PPPIX): Tl_ok; cdecl; external libleptb;
function pixFillMapHoles(pix: PPIX; nx: Tl_int32; ny: Tl_int32; filltype: Tl_int32): Tl_ok; cdecl; external libleptb;
function pixExtendByReplication(pixs: PPIX; addw: Tl_int32; addh: Tl_int32): PPIX; cdecl; external libleptb;
function pixSmoothConnectedRegions(pixs: PPIX; pixm: PPIX; factor: Tl_int32): Tl_ok; cdecl; external libleptb;
function pixGetInvBackgroundMap(pixs: PPIX; bgval: Tl_int32; smoothx: Tl_int32; smoothy: Tl_int32): PPIX; cdecl; external libleptb;
function pixApplyInvBackgroundGrayMap(pixs: PPIX; pixm: PPIX; sx: Tl_int32; sy: Tl_int32): PPIX; cdecl; external libleptb;
function pixApplyInvBackgroundRGBMap(pixs: PPIX; pixmr: PPIX; pixmg: PPIX; pixmb: PPIX; sx: Tl_int32;
  sy: Tl_int32): PPIX; cdecl; external libleptb;
function pixApplyVariableGrayMap(pixs: PPIX; pixg: PPIX; target: Tl_int32): PPIX; cdecl; external libleptb;
function pixGlobalNormRGB(pixd: PPIX; pixs: PPIX; rval: Tl_int32; gval: Tl_int32; bval: Tl_int32;
  mapval: Tl_int32): PPIX; cdecl; external libleptb;
function pixGlobalNormNoSatRGB(pixd: PPIX; pixs: PPIX; rval: Tl_int32; gval: Tl_int32; bval: Tl_int32;
  factor: Tl_int32; rank: Tl_float32): PPIX; cdecl; external libleptb;
function pixThresholdSpreadNorm(pixs: PPIX; filtertype: Tl_int32; edgethresh: Tl_int32; smoothx: Tl_int32; smoothy: Tl_int32;
  gamma: Tl_float32; minval: Tl_int32; maxval: Tl_int32; targetthresh: Tl_int32; ppixth: PPPIX;
  ppixb: PPPIX; ppixd: PPPIX): Tl_ok; cdecl; external libleptb;
function pixBackgroundNormFlex(pixs: PPIX; sx: Tl_int32; sy: Tl_int32; smoothx: Tl_int32; smoothy: Tl_int32;
  delta: Tl_int32): PPIX; cdecl; external libleptb;
function pixContrastNorm(pixd: PPIX; pixs: PPIX; sx: Tl_int32; sy: Tl_int32; mindiff: Tl_int32;
  smoothx: Tl_int32; smoothy: Tl_int32): PPIX; cdecl; external libleptb;
function pixAffineSampledPta(pixs: PPIX; ptad: PPTA; ptas: PPTA; incolor: Tl_int32): PPIX; cdecl; external libleptb;
function pixAffineSampled(pixs: PPIX; vc: Pl_float32; incolor: Tl_int32): PPIX; cdecl; external libleptb;
function pixAffinePta(pixs: PPIX; ptad: PPTA; ptas: PPTA; incolor: Tl_int32): PPIX; cdecl; external libleptb;
function pixAffine(pixs: PPIX; vc: Pl_float32; incolor: Tl_int32): PPIX; cdecl; external libleptb;
function pixAffinePtaColor(pixs: PPIX; ptad: PPTA; ptas: PPTA; colorval: Tl_uint32): PPIX; cdecl; external libleptb;
function pixAffineColor(pixs: PPIX; vc: Pl_float32; colorval: Tl_uint32): PPIX; cdecl; external libleptb;
function pixAffinePtaGray(pixs: PPIX; ptad: PPTA; ptas: PPTA; grayval: Tl_uint8): PPIX; cdecl; external libleptb;
function pixAffineGray(pixs: PPIX; vc: Pl_float32; grayval: Tl_uint8): PPIX; cdecl; external libleptb;
function pixAffinePtaWithAlpha(pixs: PPIX; ptad: PPTA; ptas: PPTA; pixg: PPIX; fract: Tl_float32;
  border: Tl_int32): PPIX; cdecl; external libleptb;
function getAffineXformCoeffs(ptas: PPTA; ptad: PPTA; pvc: PPl_float32): Tl_ok; cdecl; external libleptb;
function affineInvertXform(vc: Pl_float32; pvci: PPl_float32): Tl_ok; cdecl; external libleptb;
function affineXformSampledPt(vc: Pl_float32; x: Tl_int32; y: Tl_int32; pxp: Pl_int32; pyp: Pl_int32): Tl_ok; cdecl; external libleptb;
function affineXformPt(vc: Pl_float32; x: Tl_int32; y: Tl_int32; pxp: Pl_float32; pyp: Pl_float32): Tl_ok; cdecl; external libleptb;
function linearInterpolatePixelColor(datas: Pl_uint32; wpls: Tl_int32; w: Tl_int32; h: Tl_int32; x: Tl_float32;
  y: Tl_float32; colorval: Tl_uint32; pval: Pl_uint32): Tl_ok; cdecl; external libleptb;
function linearInterpolatePixelGray(datas: Pl_uint32; wpls: Tl_int32; w: Tl_int32; h: Tl_int32; x: Tl_float32;
  y: Tl_float32; grayval: Tl_int32; pval: Pl_int32): Tl_ok; cdecl; external libleptb;
function gaussjordan(a: PPl_float32; b: Pl_float32; n: Tl_int32): Tl_int32; cdecl; external libleptb;
function pixAffineSequential(pixs: PPIX; ptad: PPTA; ptas: PPTA; bw: Tl_int32; bh: Tl_int32): PPIX; cdecl; external libleptb;
function createMatrix2dTranslate(transx: Tl_float32; transy: Tl_float32): Pl_float32; cdecl; external libleptb;
function createMatrix2dScale(scalex: Tl_float32; scaley: Tl_float32): Pl_float32; cdecl; external libleptb;
function createMatrix2dRotate(xc: Tl_float32; yc: Tl_float32; angle: Tl_float32): Pl_float32; cdecl; external libleptb;
function ptaTranslate(ptas: PPTA; transx: Tl_float32; transy: Tl_float32): PPTA; cdecl; external libleptb;
function ptaScale(ptas: PPTA; scalex: Tl_float32; scaley: Tl_float32): PPTA; cdecl; external libleptb;
function ptaRotate(ptas: PPTA; xc: Tl_float32; yc: Tl_float32; angle: Tl_float32): PPTA; cdecl; external libleptb;
function boxaTranslate(boxas: PBOXA; transx: Tl_float32; transy: Tl_float32): PBOXA; cdecl; external libleptb;
function boxaScale(boxas: PBOXA; scalex: Tl_float32; scaley: Tl_float32): PBOXA; cdecl; external libleptb;
function boxaRotate(boxas: PBOXA; xc: Tl_float32; yc: Tl_float32; angle: Tl_float32): PBOXA; cdecl; external libleptb;
function ptaAffineTransform(ptas: PPTA; mat: Pl_float32): PPTA; cdecl; external libleptb;
function boxaAffineTransform(boxas: PBOXA; mat: Pl_float32): PBOXA; cdecl; external libleptb;
function l_productMatVec(mat: Pl_float32; vecs: Pl_float32; vecd: Pl_float32; size: Tl_int32): Tl_ok; cdecl; external libleptb;
function l_productMat2(mat1: Pl_float32; mat2: Pl_float32; matd: Pl_float32; size: Tl_int32): Tl_ok; cdecl; external libleptb;
function l_productMat3(mat1: Pl_float32; mat2: Pl_float32; mat3: Pl_float32; matd: Pl_float32; size: Tl_int32): Tl_ok; cdecl; external libleptb;
function l_productMat4(mat1: Pl_float32; mat2: Pl_float32; mat3: Pl_float32; mat4: Pl_float32; matd: Pl_float32;
  size: Tl_int32): Tl_ok; cdecl; external libleptb;
function l_getDataBit(line: pointer; n: Tl_int32): Tl_int32; cdecl; external libleptb;
procedure l_setDataBit(line: pointer; n: Tl_int32); cdecl; external libleptb;
procedure l_clearDataBit(line: pointer; n: Tl_int32); cdecl; external libleptb;
procedure l_setDataBitVal(line: pointer; n: Tl_int32; val: Tl_int32); cdecl; external libleptb;
function l_getDataDibit(line: pointer; n: Tl_int32): Tl_int32; cdecl; external libleptb;
procedure l_setDataDibit(line: pointer; n: Tl_int32; val: Tl_int32); cdecl; external libleptb;
procedure l_clearDataDibit(line: pointer; n: Tl_int32); cdecl; external libleptb;
function l_getDataQbit(line: pointer; n: Tl_int32): Tl_int32; cdecl; external libleptb;
procedure l_setDataQbit(line: pointer; n: Tl_int32; val: Tl_int32); cdecl; external libleptb;
procedure l_clearDataQbit(line: pointer; n: Tl_int32); cdecl; external libleptb;
function l_getDataByte(line: pointer; n: Tl_int32): Tl_int32; cdecl; external libleptb;
procedure l_setDataByte(line: pointer; n: Tl_int32; val: Tl_int32); cdecl; external libleptb;
function l_getDataTwoBytes(line: pointer; n: Tl_int32): Tl_int32; cdecl; external libleptb;
procedure l_setDataTwoBytes(line: pointer; n: Tl_int32; val: Tl_int32); cdecl; external libleptb;
function l_getDataFourBytes(line: pointer; n: Tl_int32): Tl_int32; cdecl; external libleptb;
procedure l_setDataFourBytes(line: pointer; n: Tl_int32; val: Tl_int32); cdecl; external libleptb;
function barcodeDispatchDecoder(barstr: pchar; format: Tl_int32; debugflag: Tl_int32): pchar; cdecl; external libleptb;
function barcodeFormatIsSupported(format: Tl_int32): Tl_int32; cdecl; external libleptb;
function pixFindBaselines(pixs: PPIX; ppta: PPPTA; pixadb: PPIXA): PNUMA; cdecl; external libleptb;
function pixDeskewLocal(pixs: PPIX; nslices: Tl_int32; redsweep: Tl_int32; redsearch: Tl_int32; sweeprange: Tl_float32;
  sweepdelta: Tl_float32; minbsdelta: Tl_float32): PPIX; cdecl; external libleptb;
function pixGetLocalSkewTransform(pixs: PPIX; nslices: Tl_int32; redsweep: Tl_int32; redsearch: Tl_int32; sweeprange: Tl_float32;
  sweepdelta: Tl_float32; minbsdelta: Tl_float32; pptas: PPPTA; pptad: PPPTA): Tl_ok; cdecl; external libleptb;
function pixGetLocalSkewAngles(pixs: PPIX; nslices: Tl_int32; redsweep: Tl_int32; redsearch: Tl_int32; sweeprange: Tl_float32;
  sweepdelta: Tl_float32; minbsdelta: Tl_float32; pa: Pl_float32; pb: Pl_float32; debug: Tl_int32): PNUMA; cdecl; external libleptb;
function bbufferCreate(indata: Pl_uint8; nalloc: Tl_int32): PL_BBUFFER; cdecl; external libleptb;
procedure bbufferDestroy(pbb: PPL_BBUFFER); cdecl; external libleptb;
function bbufferDestroyAndSaveData(pbb: PPL_BBUFFER; pnbytes: Psize_t): Pl_uint8; cdecl; external libleptb;
function bbufferRead(bb: PL_BBUFFER; src: Pl_uint8; nbytes: Tl_int32): Tl_ok; cdecl; external libleptb;
function bbufferReadStream(bb: PL_BBUFFER; fp: PFILE; nbytes: Tl_int32): Tl_ok; cdecl; external libleptb;
function bbufferExtendArray(bb: PL_BBUFFER; nbytes: Tl_int32): Tl_ok; cdecl; external libleptb;
function bbufferWrite(bb: PL_BBUFFER; dest: Pl_uint8; nbytes: Tsize_t; pnout: Psize_t): Tl_ok; cdecl; external libleptb;
function bbufferWriteStream(bb: PL_BBUFFER; fp: PFILE; nbytes: Tsize_t; pnout: Psize_t): Tl_ok; cdecl; external libleptb;
function pixBilateral(pixs: PPIX; spatial_stdev: Tl_float32; range_stdev: Tl_float32; ncomps: Tl_int32; reduction: Tl_int32): PPIX; cdecl; external libleptb;
function pixBilateralGray(pixs: PPIX; spatial_stdev: Tl_float32; range_stdev: Tl_float32; ncomps: Tl_int32; reduction: Tl_int32): PPIX; cdecl; external libleptb;
function pixBilateralExact(pixs: PPIX; spatial_kel: PL_KERNEL; range_kel: PL_KERNEL): PPIX; cdecl; external libleptb;
function pixBilateralGrayExact(pixs: PPIX; spatial_kel: PL_KERNEL; range_kel: PL_KERNEL): PPIX; cdecl; external libleptb;
function pixBlockBilateralExact(pixs: PPIX; spatial_stdev: Tl_float32; range_stdev: Tl_float32): PPIX; cdecl; external libleptb;
function makeRangeKernel(range_stdev: Tl_float32): PL_KERNEL; cdecl; external libleptb;
